# ComfyUI_RH_VoxCPM

./: .gitignore  README.md  README_CN.md  README_zh.md  pyproject.toml
examples/: voxcpm_basic_api.json
nodes/: generate.py  loader.py  multi_speaker.py  train.py  validation.py
tests/: test_generate.py  test_multi_speaker.py  test_validation.py
