[project]
name = "rh_voxcpm"
description = "ComfyUI custom nodes for VoxCPM text-to-speech, voice cloning, multi-speaker generation, and LoRA training."
version = "260715.20.14"
license = "Apache-2.0"
requires-python = ">=3.10"
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["voxcpm", "soundfile", "librosa", "wetext", "modelscope>=1.22.0", "funasr", "inflect", "addict", "simplejson", "sortedcontainers", "pydantic", "transformers", "datasets", "safetensors", "argbind"]

[project.urls]
Repository = "https://github.com/RH-RunningHub/ComfyUI_RH_VoxCPM"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/RH-RunningHub/ComfyUI_RH_VoxCPM/wiki"
"Bug Tracker" = "https://github.com/RH-RunningHub/ComfyUI_RH_VoxCPM/issues"

[tool.comfy]
PublisherId = "gluttony10"
DisplayName = "ComfyUI_RH_VoxCPM"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility
